package model;

/**
 *
 */
public class Achat {
}
