package model;

public class Parcours {
}
