package utils;

public class Constants {
    public static final String DRIVER_NAME ="org.mariadb.jdbc.Driver";
    public static final int PORT =  2013;
    public static final int CAT_SPORT = 1;
    public static final int CAT_MOBILIER = 2;
    public static final int CAT_TECH= 3;
    public static final int CAT_ALIMENTAIRE = 4;
    public static final int CAT_EDUCATION = 5;
    public static final int CAT_MODE = 6;
}
