@startuml

title __SERVER's Class Diagram__\n

  package model {
    class Achat {
    }
  }
  

  package model {
    class Boutique {
    }
  }
  

  package utils {
    package utils.daoUtils {
      class BoutiqueDAO {
      }
    }
  }
  

  package model {
    class CategorieBoutique {
    }
  }
  

  package utils {
    package utils.daoUtils {
      class CategorieBoutiqueDAO {
      }
    }
  }
  

  package model {
    class CategorieProduit {
    }
  }
  

  package utils {
    package utils.daoUtils {
      class CategorieProduitDAO {
      }
    }
  }
  

  package controller {
    class Client {
    }
  }
  

  package model {
    class ClientModel {
    }
  }
  

  package model {
    class ConnectionPool {
    }
  }
  

  package utils {
    class Constants {
    }
  }
  

  package utils {
    abstract class DAO {
    }
  }
  

  package db {
    class Database {
    }
  }
  

  package model {
    class Emplacement {
    }
  }
  

  package utils {
    package utils.daoUtils {
      class EmplacementDAO {
      }
    }
  }
  

  package model {
    class Fournisseur {
    }
  }
  

  package utils {
    package utils.daoUtils {
      class FournisseurDAO {
      }
    }
  }
  

  package model {
    class InputFromClient {
    }
  }
  

  package controller {
    class Main {
    }
  }
  

  package utils {
    interface ModelObject {
    }
  }
  

  package model {
    class Parcours {
    }
  }
  

  package model {
    interface Pool {
    }
  }
  

  package model {
    class Produit {
    }
  }
  

  package utils {
    package utils.daoUtils {
      class ProduitDAO {
      }
    }
  }
  

  package controller {
    class Sender {
    }
  }
  

  package controller {
    class Server {
    }
  }
  

  package model {
    class StockEntree {
    }
  }
  

  package utils {
    package utils.daoUtils {
      class StockEntreeDAO {
      }
    }
  }
  

  package model {
    class StockSortie {
    }
  }
  

  package utils {
    package utils.daoUtils {
      class StockSortieDAO {
      }
    }
  }
  

  Boutique o-- Emplacement : emplacement
  Boutique o-- CategorieBoutique : categorieBoutique
  BoutiqueDAO -up-|> DAO
  BoutiqueDAO o-- Client : client
  CategorieBoutiqueDAO -up-|> DAO
  CategorieProduit -up-|> ModelObject
  CategorieProduitDAO -up-|> DAO
  Client o-- Server : server
  Client o-- BoutiqueDAO : bDAO
  Client o-- CategorieBoutiqueDAO : cbDAO
  Client o-- CategorieProduitDAO : cpDAO
  Client o-- EmplacementDAO : eDAO
  Client o-- FournisseurDAO : fDAO
  Client o-- ProduitDAO : pDAO
  Client o-- StockSortieDAO : ssDAO
  Client o-- Sender : sender
  ConnectionPool -up-|> Pool
  ConnectionPool o-- Database : db
  Emplacement o-- Boutique : reference
  EmplacementDAO -up-|> DAO
  Fournisseur -up-|> ModelObject
  FournisseurDAO -up-|> DAO
  Produit o-- Fournisseur : fournisseur
  Produit o-- StockEntree : stckEntree
  Produit o-- StockSortie : stckSortie
  Produit o-- CategorieProduit : catProd
  ProduitDAO -up-|> DAO
  Sender o-- BoutiqueDAO : bDAO
  Sender o-- CategorieBoutiqueDAO : cbDAO
  Sender o-- CategorieProduitDAO : cpDAO
  Sender o-- EmplacementDAO : eDAO
  Sender o-- FournisseurDAO : fDAO
  Sender o-- ProduitDAO : pDAO
  Sender o-- StockSortieDAO : ssDAO
  Sender o-- StockEntreeDAO : esDAO
  Server o-- ConnectionPool : listeCo
  StockEntree o-- Produit : id_produit
  StockEntreeDAO -up-|> DAO
  StockSortie o-- Produit : id_produit
  StockSortieDAO -up-|> DAO


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
